[package]
name        = "zstd"
version     = "0.1.0"
authors     = ["Karrighan <karrighan@protonmail.com>"]
edition     = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin        = "0.5.2"
volatile    = "0.2.6"
x86_64      = "0.9.3"
collections = { path = "collections", version = "0.1.0" }
eco         = { path = "eco", version = "0.1.0" }

[dependencies.lazy_static]
version     = "1.4.0"
features    = ["spin_no_std"]
