[package]
name        = "zstd"
version     = "0.1.0"
description = "A lightweight alternative to the Rust standard library"
authors     = ["Karrighan <karrighan@protonmail.com>"]
edition     = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zstd"
path = "src/lib.rs"
crate-type = ["dylib"]

[workspace]
members = [
  "alloc",
  "collections",
  "eco",
  "io",
  "mem",
]

[dependencies]
spin        = "0.5.2"
volatile    = "0.2.6"
collections = { path = "collections", version = "0.1.0" }
eco         = { path = "eco",         version = "0.1.0" }
io          = { path = "io",          version = "0.1.0" }

[dependencies.lazy_static]
version     = "1.4.0"
features    = ["spin_no_std"]
